# pystarter

./: pyproject.toml
pystarter/: Counter.py  Fibo.py  acm.py  cm.py  coro.py  funs.py  iopool.py  main.py  persist_rect.py  primes.py  producer_consumer.py  rect.py  rect_converters.py  scheduler.py  slist.py  utils.py
pystarter/asyncex/: ahof.py  aiter.py  all.py  cb.py  comp.py  eager.py  fut.py  hello.py  pat.py  pmap.py  pool.py  ppool.py  sub.py  task.py  timed.py  tpool.py  uv.py  wrap.py
pystarter/web/: api.py  wcl.py  wsb.py  wsc.py  wsl.py  wss.py
pystarter/web/client/: index.html
tests/: fibo_test.py  list_test.py  test_funs.py  test_primes.py
