[tool.poetry]
name = "pystarter"
version = "0.1.0"
description = "Python Starter project based on poetry"
authors = ["Pervez Iqbal <pervezfunctor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"
pyrsistent = "^0.18.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"
pyright = "^0.0.13"
flake8 = "^4.0.1"
ipykernel = "^6.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[flake8]
max-line-length = 99